# rw_cdc_sr

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  README.md  USER_GUIDE.md  docker-compose.yml  package-lock.json  package.json  vite.config.ts
.github/workflows/: docker-publish.yml
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/api/: connection.rs  metadata.rs  mod.rs  risingwave.rs  sync.rs  task.rs  webhook.rs
backend/src/db/: mod.rs  repository.rs  schema.rs
backend/src/generators/: risingwave_ddl.rs  starrocks_ddl.rs
backend/src/models/: config.rs  mod.rs  table.rs  task.rs
backend/src/services/: metadata_service.rs  sync_engine.rs
backend/src/utils/: error.rs  mod.rs  type_mapper.rs
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/: MainLayout.tsx
frontend/src/pages/: ConnectionConfig.tsx  RisingWaveManager.tsx  TableSelection.tsx  TaskManagement.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
k8s/: README.md  deployment.yaml
monitor/: alertmanager-config-full.yaml  risingwave-alerts.yaml  risingwave-dev-dashboard.json  risingwave-user-dashboard.json
src-tauri/: Cargo.toml  check-build.sh  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: connection.rs  metadata.rs  mod.rs  sync.rs  task.rs
src-tauri/src/db/: mod.rs  repository.rs  schema.rs
src-tauri/src/generators/: mod.rs  risingwave_ddl.rs  starrocks_ddl.rs
src-tauri/src/models/: table.rs  task.rs
src-tauri/src/services/: connection_service.rs  metadata_service.rs  mod.rs  sync_engine.rs
src-tauri/src/utils/: crypto.rs  type_mapper.rs
src/components/: MainLayout.tsx
src/pages/: TableSelection.tsx
src/services/: api.ts
src/types/: index.ts
