[package]
name = "rw_cdc_sr"
version = "0.1.0"
edition = "2024"
authors = ["Your Name"]
description = "A tool to sync MySQL data to StarRocks via RisingWave CDC"
license = "MIT"

[lib]
name = "rw_cdc_sr_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "rw_cdc_sr"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步运行时
tokio = { version = "1.41", features = ["full"] }

# 数据库驱动 (使用 SQLx)
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "mysql",
    "postgres",
    "chrono",
    "json",
    "macros",
    "migrate"
] }

# 原生 MySQL 驱动 (用于 StarRocks 兼容性)
mysql_async = "0.34"
urlencoding = "2.1"

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 密码加密
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

# 配置管理
config = "0.14"

# 其他工具
once_cell = "1.20"
regex = "1.11"
dirs = "5.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
